Carga de proyecto
Carga de la primera versión de web cv este no incluye backend

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>JesusCruzWebCV</title>
+  <title>Jesús Cruz Morales</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <meta name="keywords" content="Angular, .NET, SQL Server, Full Stack Developer, Data Analyst, Desarrollo web, Analista de datos, Portafolio, CV, Jesús Cruz">
+  <meta name="author" content="Jesús Cruz">
+
+  <meta name="theme-color" media="(prefers-color-scheme: light)" content="#EDEBE6">
+  <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#1B1B1B">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+  <meta property="og:title" content="Jesús Cruz | Full Stack Developer & Data Analyst">
+  <meta property="og:description" content="Portafolio de Jesús Cruz con proyectos y experiencia en desarrollo web y análisis de datos.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://jesuscmx-dev.web.app">
+  <meta property="og:image" content="https://jesuscmx-dev.web.app/assets/projects/Web_CV.webp">
+  <link rel="icon" type="image/x-icon" href="/assets/images/Logo_SF.png">
 </head>
 <body>
   <app-root></app-root>
