Actualización de diseño
Se agregan diseños para dispositivos móviles y SEO

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
   <meta property="og:image" content="https://jesuscmx-dev.web.app/assets/projects/Web_CV.webp">
   <link rel="icon" type="image/x-icon" href="/assets/images/Logo_SF.png">
 </head>
-<body>
+<body class="bg-[var(--sand-light)] transition-colors duration-300">
   <app-root></app-root>
 </body>
 </html>
