--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,8 @@
   <meta property="og:title" content="Jesús Cruz | Full Stack Developer & Data Analyst">
   <meta property="og:description" content="Portafolio de Jesús Cruz con proyectos y experiencia en desarrollo web y análisis de datos.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://jesuscmx-dev.web.app">
-  <meta property="og:image" content="https://jesuscmx-dev.web.app/assets/projects/Web_CV.webp">
+  <meta property="og:url" content="https://jesuscmx.dev">
+  <meta property="og:image" content="https://jesuscmx.dev/assets/images/projects/Web_CV.webp">
   <link rel="icon" type="image/x-icon" href="/assets/images/Logo_SF.png">
 </head>
 <body class="bg-[var(--sand-light)] transition-colors duration-300">
